avmux: Fix invalid address passing to av_opt_set_int()

https://bugzilla.gnome.org/show_bug.cgi?id=723615